--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-validator": "^6.14.2",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mysql2": "^2.2.5",
